Worked on fixing bug with header and overlapping issues

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -4,7 +4,6 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #ea526f;
-  position: -webkit-sticky;
   position: fixed;
   width: 100%;
   top: 0;
